# kdeconnect-kde

./: CMakeLists.txt  kdeconnect.appdata.xml  org.kde.kdeconnect.nonplasma.desktop
cli/: CMakeLists.txt
cmake/: DbusInterfaceMacros.cmake
core/: CMakeLists.txt  daemon.cpp  daemon.h  default_args.h  device.cpp  device.h  filetransferjob.cpp  kdeconnectpluginconfig.cpp  kdeconnectpluginconfig.h  networkpackage.cpp  pluginloader.cpp
core/backends/lan/: downloadjob.cpp  landevicelink.cpp  lanlinkprovider.cpp  lanpairinghandler.h  uploadjob.cpp
core/backends/loopback/: loopbackdevicelink.cpp  loopbacklinkprovider.cpp
daemon/: CMakeLists.txt  kdeconnectd.cpp
fileitemactionplugin/: kdeconnectsendfile.desktop
interfaces/: CMakeLists.txt  dbusinterfaces.cpp  dbusinterfaces.h
kcm/: CMakeLists.txt  kcm_kdeconnect.desktop  kdeconnect.desktop
kded/: CMakeLists.txt  daemon.cpp  default_args.h  device.cpp  device.h  idevice.h  kdeconnect.desktop  kdeconnectd.cpp
kded/plugins/: kdeconnectplugin.cpp  kdeconnectplugin.h  pluginloader.cpp  pluginloader.h
kded/plugins/battery/: CMakeLists.txt
kded/plugins/clipboard/: CMakeLists.txt  clipboardplugin.cpp  clipboardplugin.h
kded/plugins/mpriscontrol/: CMakeLists.txt
kded/plugins/notifications/: CMakeLists.txt  notificationsdbusinterface.cpp  notificationsdbusinterface.h
kded/plugins/sftp/: CMakeLists.txt  mounter.h
kded/plugins/share/: CMakeLists.txt
kio/: CMakeLists.txt
libkdeconnect/: CMakeLists.txt  dbusinterfaces.h  devicesmodel.cpp  devicesmodel.h  notificationsmodel.cpp  notificationsmodel.h
livingroom/: CMakeLists.txt  main.cpp  org.kde.kdeconnect.livingroom.desktop
livingroom/qml/: main.qml
plasmoid/declarativeplugin/: CMakeLists.txt  kdeconnectdeclarativeplugin.cpp
plasmoid/package/: metadata.desktop
plugins/: CMakeLists.txt  kdeconnect.notifyrc  kdeconnect_plugin.desktop
plugins/battery/: batteryplugin.cpp  kdeconnect_battery.desktop  kdeconnect_battery.json
plugins/calendar/: CMakeLists.txt  calendarplugin.cpp  calendarplugin.h  kdeconnect_calendar.desktop
plugins/castdisplay/: CMakeLists.txt  castdisplayplugin.cpp  castdisplayplugin.h  kdeconnect_castdisplay.json
plugins/castremote/: CMakeLists.txt  castremoteplugin.cpp  castremoteplugin.h  kdeconnect_castremote.json
plugins/clipboard/: clipboardplugin.cpp  kdeconnect_clipboard.desktop  kdeconnect_clipboard.json
plugins/contact/: CMakeLists.txt  contactplugin.cpp  contactplugin.h  kdeconnect_contact.desktop
plugins/findmyphone/: CMakeLists.txt  findmyphoneplugin.cpp  findmyphoneplugin.h  kdeconnect_findmyphone.desktop
plugins/lockdevice/: kdeconnect_lockdevice.json
plugins/mousepad/: kdeconnect_mousepad.desktop  kdeconnect_mousepad.json
plugins/mpriscontrol/: kdeconnect_mpriscontrol.desktop  kdeconnect_mpriscontrol.json
plugins/mprisremote/: kdeconnect_mprisremote.json
plugins/notifications/: kdeconnect_notifications.desktop  kdeconnect_notifications.json  notificationsdbusinterface.cpp  notificationsplugin.cpp
plugins/pausemusic/: kdeconnect_pausemusic.desktop  kdeconnect_pausemusic.json  kdeconnect_pausemusic_config.desktop
plugins/ping/: kdeconnect_ping.desktop  kdeconnect_ping.json  pingplugin.cpp
plugins/pyext/: CMakeLists.txt  README  kdeconnect_pyext.json  module.h  pyext.cpp  pyext.h  script.cpp  script.h
plugins/pyext/Interpreter/: interpreter.cpp  interpreter.h
plugins/pyext/modules/: module.cpp  module.h
plugins/reminder/: CMakeLists.txt  kdeconnect_reminder.desktop  reminderplugin.cpp  reminderplugin.h
plugins/remotecontrol/: kdeconnect_remotecontrol.json
plugins/runcommand/: CMakeLists.txt  kdeconnect_runcommand.desktop  kdeconnect_runcommand.json  runcommand_config.cpp  runcommand_config.h  runcommand_config.ui  runcommandplugin.cpp  runcommandplugin.h
plugins/screensaver-inhibit/: kdeconnect_screensaver_inhibit.desktop  kdeconnect_screensaver_inhibit.json
plugins/sftp/: kdeconnect_sftp.desktop  kdeconnect_sftp.json  kdeconnect_sftp_config.desktop  mounter.cpp  sftpplugin.cpp  sftpplugin.h
plugins/share/: kdeconnect_share.desktop  kdeconnect_share.json  kdeconnect_share_config.desktop  shareplugin.cpp
plugins/sync/: CMakeLists.txt  README  kdeconnect_sync.json  syncplugin.cpp  syncplugin.h
plugins/telepathy/: CMakeLists.txt  README  kdeconnect_telepathy.desktop  telepathyplugin.cpp  telepathyplugin.h  telepatyhplugin.cpp  telepatyhplugin.h
plugins/telepathy/kded/: kdeconnect_telepathy_loader.desktop  ktpapproverfactory.h  ktpapprovermodule.cpp
plugins/telepathy/telepathy-cm/: CMakeLists.txt  kdeconnecttelepathyprotocol.cpp  kdeconnecttelepathyprotocol.h
plugins/telephony/: kdeconnect_telephony.desktop  kdeconnect_telephony.json
telepathy-cm/: CMakeLists.txt  connection.cpp  connection.h  kdeconnect.manager  kdeconnecttelepathyprotocol.h  main.cpp  protocol.cpp  protocol.h
tests/: lanlinkprovidertest.cpp
